media-services/autobrr/autobrr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
      - name: autobrr
        image: ghcr.io/autobrr/autobrr:v1.62
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: autobrr-config-pvc
