media-services/autobrr/autobrr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: media
spec:
  selector:
    app: autobrr
  ports:
  - name: web-ui
    port: 7474
