media-services/autobrr/autobrr-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr-route
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "autobrr.kerrlab.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    # Use backendRefs for Gateway API v1beta1
    - name: autobrr
      port: 7474
